MTP-2263 Fix invisible skiplink, Create skip-link class, adjust z-index on mt-header (#1092)
* MTP-2263 z-index changes on mt-header, add skiplink class to control z-index

* MTP-2263 cleanup z-index vars, add var for a11y z-index features

--- a/mt-kit/core/css/src/components/_dropdown.scss
+++ b/mt-kit/core/css/src/components/_dropdown.scss
@@ -44,7 +44,7 @@
     width: 100%;
     top: $height-header-mobile;
     background-color: var(--color-mt-white);
-    z-index: var(--z-index-feedback);
+    z-index: var(--z-index-tooltip);
     right: 0;
     border-top: $border-width-small solid var(--color-mt-mellombeige);
     padding: var(--spacer-small) 0;
