--- a/mt-kit/core/css/src/global/_body.scss
+++ b/mt-kit/core/css/src/global/_body.scss
@@ -155,7 +155,9 @@
   --border-width-small: #{$border-width-small};
   --border-width-regular: #{$border-width-regular};
   --z-index-dropdown: #{$zindex-dropdown};
-  --z-index-feedback: #{$zindex-tooltip};
+  --z-index-fixed: #{$zindex-fixed};
+  --z-index-tooltip: #{$zindex-tooltip};
+  --z-index-always-focusable-a11y: #{$zindex-always-focusable-a11y};
 
   --form-group-spacer: var(--spacer-small);
   --form-hint-spacer: var(--spacer-xxx-small);
